# lib/api-spec/openapi.yaml
@@ -85,6 +85,12 @@ paths:
             type: array
             items:
               type: string
+        - name: tagLogic
+          in: query
+          schema:
+            type: string
+            enum: [and, or]
+            default: and
         - name: page
           in: query
           schema:
